--- a/pom.xml
+++ b/pom.xml
@@ -112,26 +112,19 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<!-- or whatever version you use -->
-					<source>1.8</source>
-					<target>1.8</target>
-					 <encoding>ISO-8859-1</encoding>
-				</configuration>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
 				<configuration>
-					<show>private</show>
-					<nohelp>true</nohelp>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>ISO-8859-1</encoding>
 				</configuration>
 			</plugin>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId> 
-				<configuration> <excludes> <exclude>org/teachingkidsprogramming/recipes/completed/*.java</exclude> 
-				<exclude>org/teachingkidsprogramming/section*/*.java</exclude> </excludes> 
-				</configuration> </plugin> -->
 		</plugins>
 	</build>
 
@@ -139,4 +132,7 @@
 		<url>http://teachingkidsprogramming.com/</url>
 		<name>Teaching Kids Programming</name>
 	</organization>
+	<properties>
+		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+	</properties>
 </project>
