--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.teachingkidsprogramming</groupId>
 	<artifactId>TeachingKidsProgramming</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>A proven library of high-quality programming courseware for kids. TKP is a designated project of the US non-profit (501c3) the MONA Foundation. The mission of the MONA Foundation is to &quot;support grassroots educational initiatives that educate everyone—including girls.&quot;</description>
@@ -27,7 +27,7 @@
 			<organization>Teaching Kids Programming</organization>
 			<organizationUrl>http://teachingkidsprogramming.org/</organizationUrl>
 		</developer>
-	</developers>	
+	</developers>
 	<scm>
 		<connection>scm:git:git@github.com:TeachingKidsProgramming/TeachingKidsProgramming.Source.Java.git</connection>
 		<developerConnection>scm:git:git@github.com:TeachingKidsProgramming/TeachingKidsProgramming.Source.Java.git</developerConnection>
@@ -113,6 +113,20 @@
 				<artifactId>maven-repository-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -124,9 +138,10 @@
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 	</properties>
 	<distributionManagement>
-  <repository>
-    <id>sonatype</id>
-    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-  </repository>
-</distributionManagement>
+		<repository>
+			<id>sonatype</id>
+			<!-- <url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</repository>
+	</distributionManagement>
 </project>
