--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ApprovalTests"/>
+	<classpathentry kind="lib" path="C:/Users/lynnlangit/Documents/GitHub/TKPSource/TeachingKidsProgramming.Source.Java/src/jars/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lynnlangit/Documents/GitHub/TKPSource/TeachingKidsProgramming.Source.Java/src/jars/log4j-1.2.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lynnlangit/Documents/GitHub/TKPSource/TeachingKidsProgramming.Source.Java/src/jars/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lynnlangit/Documents/GitHub/TKPSource/TeachingKidsProgramming.Source.Java/src/jars/velocity-1.4-p1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
