--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,6 @@
 	</distributionManagement>
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -88,12 +87,22 @@
 				<artifactId>maven-repository-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
-
-
-
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.teachingkidsprogramming.section01forloops.SimpleSquare</mainClass>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
-
 	<organization>
 		<url>http://teachingkidsprogramming.org/</url>
 		<name>Teaching Kids Programming</name>
