--- a/build.xml
+++ b/build.xml
@@ -48,6 +48,7 @@
 		</copy>
 		<copy todir="${build}">
 			<fileset dir="${rsrc}" includes="*.png" />
+			<fileset dir="${rsrc}" includes="*.rtf" />
 		</copy>
 		<copy todir="${build}/src/org/teachingextensions/logo">
 			<fileset dir="${rsrc}" includes="*.png" />
