--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,7 @@
 		<copy todir="${build}">
 			<fileset dir="${rsrc}" includes="*.png" />
 			<fileset dir="${rsrc}" includes="*.rtf" />
+			<fileset dir="${rsrc}" includes="*.wav" />
 		</copy>
 		<copy todir="${build}/src/org/teachingextensions/logo">
 			<fileset dir="${rsrc}" includes="*.png" />
